5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1723_2508.log
== TEST (2019-05-13 22:00:12) 
-- CODE:
n = int(input("sigite os n primeiros termos"))

soma = 0 
i = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:25) 
-- CODE:
n = int(input("sigite os n primeiros termos"))

soma = 0 
i = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:31) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 0 
i = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:49) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 0 
i = 0
j = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:31) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 0 
i = 1
j = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-0.76435786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:38) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 0 
i = 1
j = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-0.76435786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:59) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 0 
i = 2
j = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-0.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:02:14) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>0):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
2.77950938
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:02:59) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:03:25) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:03:35) 
-- CODE:
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j)*(4/(i*(i + 1)*(i + 2))))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.190739
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.78253968
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.77310512
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.773281
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:07:59) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j))*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.15709
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.78253968
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.77310512
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.773281
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:08:00) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j))*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:08:02) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(n>1):
	soma = soma + ((-1**j))*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.149634
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.78253968
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.77310512
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.773281
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:05) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(1<n):
	soma = soma + ((-1**j))*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n -1
print(round(soma,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:17) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(1<n):
	soma = soma + ((-1**j))*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n -1
print(round(soma,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:32) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(1<n):
	soma = soma + ((-1)**j)*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n -1
print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:09:44) 
-- CODE:
from math import*
n = int(input("sigite os n primeiros termos: "))

soma = 3
i = 2
j = 0
while(1<n):
	soma = soma + ((-1)**j)*(4/(i*(i + 1)*(i + 2)))
	i = i + 2
	j = j + 1
	n = n -1
print(round(soma,8))
-- EXECUTION TIME:
0.152695
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
